# rust-common

./: .cursorignore  Cargo.toml  analyze_timezones.rs  debug_andorra.rs
.cursor/rules/: description.md
src/: lib.rs  markdown_applier.rs  placeholders.rs
src/country_code/: country_code.rs  error.rs  iana_to_country.rs  mod.rs  time_zone_continent.rs
src/country_code/names/: en.rs  mod.rs
src/country_code/phone_codes/: dicts.rs  mod.rs  phone_codes.rs  phone_country_code.rs
src/fuzzy_data/: city.rs  mod.rs
src/markdown_applier/: header_detector.rs  html_renderer.rs  img_detector.rs  last_chars.rs  markdown_applier.rs  mod.rs  text_decorators.rs  ul_detector.rs  utils.rs
src/markdown_segments/: get_segments.rs
src/object_id/: mod.rs  object_id.rs  utils.rs
src/phone_codes/: dicts.rs  mod.rs  phone_codes.rs  phone_country_code.json  phone_country_code.rs  phone_number.rs
src/phone_codes/by_country/: mod.rs  sau_phone_number.rs
src/text_segments/: get_segments.rs  mod.rs
src/time_zones/: by_city.rs  dst.rs  dst_offsets.rs  examples_dst_iana_timezones.txt  examples_dst_snapshot.txt  examples_no_dst_iana_snapshot.txt  examples_non_iana_timezones.txt  general_time_zone.rs  iana_timezone.rs  iana_to_country.rs  is_summer_time.rs  mod.rs  named_time_zone.rs  no_dst_offsets.rs  test_all_time_zones.rs  test_all_time_zones_summer.rs  time_zone.rs  time_zone_offset.rs  to_utc_time.rs  utils.rs
src/time_zones/iana_cities/: africa.rs  america.rs  antarctica.rs  arctic.rs  argentina.rs  asia.rs  atlantic.rs  australia.rs  brazil.rs  canada.rs  chile.rs  europe.rs  indian.rs  indiana.rs  kentucky.rs  (+5 more)
src/user_agent/: detect_browser.rs  detect_device_type.rs  detect_platform_brand.rs  mod.rs
src/validators/: mod.rs  validate_email.rs
