[package]
name = "rust-common"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
country-code = ["dep:lazy_static"]
validators = []
fuzzy_data = []
placeholders = []

[dependencies]
lazy_static = { version = "*", optional = true }
