[package]
name = "rust-common"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
country-code = ["dep:lazy_static"]
time-zones = ["dep:lazy_static", "chrono", "chrono-tz", "rust-extensions"]
validators = []
fuzzy_data = []
placeholders = ["rust-extensions"]


[dependencies]
lazy_static = { version = "*", optional = true }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", optional = true }

chrono = { version = "*", optional = true }
chrono-tz = { version = "*", optional = true }
